# freedesktop-icons

./: Cargo.toml  README.md
benches/: simple_lookup.rs  tests.rs
src/: cache.rs  lib.rs  pwa.rs  walk_dir.rs
src/theme/: directories.rs  mod.rs  parse.rs  paths.rs
test_assets/icons/cosmic-base/: index.theme
test_assets/icons/cosmic-base-dark/: index.theme
test_assets/icons/hicolor/: index.theme
test_assets/icons/pop-os-base/: index.theme
