[package]
name = "cosmic-freedesktop-icons"
version = "0.4.0"
edition = "2024"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/pop-os/freedesktop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
dirs = "6.0"
thiserror = "2.0"
xdg = "3.0"
tracing = "0.1.41"
ini_core = "0.2.0"
memmap2 = "0.9"

[dev-dependencies]
speculoos = "0.13.0"
linicon = "2.3.0"
gtk4 = "0.10"
criterion = "0.7"

[features]
default = []
local_tests = []

[[bench]]
name = "simple_lookup"
harness = false
