[package]
name = "cosmic-freedesktop-icons"
version = "0.4.0"
edition = "2024"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/pop-os/freedesktop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
bstr = "1.12.1"
btoi = "0.5.0"
memchr = "2.7.6"
memmap2 = "0.9"
thiserror = "2.0"
tracing = { version = "0.1.41", default-features = false }
xdg = "3.0"

[dev-dependencies]
speculoos = "0.13.0"
criterion = "0.7"
tempfile = "3.14"

[features]
default = []
local_tests = []

[[bench]]
name = "simple_lookup"
harness = false
